--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,6 +1,6 @@
 @import '../../settings';
 
-li.task-item{
+li.card-item{
     background-color: white;
     padding: $gap;
     border-radius: $card-border-radius;
