--- a/src/components/Column/Column.scss
+++ b/src/components/Column/Column.scss
@@ -31,7 +31,7 @@
         border-bottom-right-radius: $column-border-radius;
     }
 
-    ul.task-list{
+    ul.card-list{
         list-style-type: none;
         margin: 0;
         max-height: calc(100% - #{$column-header-height - #{$column-footer-height}});
