Added drag and drop

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,5 +11,13 @@ body {
     display: grid;
     grid-template-rows: 40px 50px 1fr;
     background-color: $board-bg-color;
+    color: $app-main-color;
+
+    .icon{
+        font-size: 14px;
+        margin-right: 3px;
+    }
+
+
 }
 
