--- a/src/_settings.scss
+++ b/src/_settings.scss
@@ -1,11 +1,12 @@
 $board-bg-color: rgb(165, 224, 224);
 $navbar-app-bg-color:  #0067a3;
 $navbar-board-bg-color: #0079bf;
+$app-main-color: #333;
 $gap: 10px;
 $column-header-height: 36px;
 $column-footer-height: 36px;
-$column-border-radius: 10px;
-$card-border-radius: 5px;
+$column-border-radius: 5px;
+$card-border-radius: 3px;
 $list-bg-color: #ebecf0;
 
 
