Update Title & Remove Column

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,10 +12,20 @@ body {
     grid-template-rows: 40px 50px 1fr;
     background-color: $board-bg-color;
     color: $app-main-color;
+    overflow-y: auto;
 
     .icon{
         font-size: 14px;
         margin-right: 3px;
+    }
+    .customize-input-column{
+        border: none;
+        cursor: pointer;
+        &:focus{
+            outline: none;
+            box-shadow: none;
+        }
+        background-color: inherit;
     }
 
 
