--- a/client/src/_settings.scss
+++ b/client/src/_settings.scss
@@ -1,6 +1,6 @@
-$board-bg-color: rgb(165, 224, 224);
-$navbar-app-bg-color:  #0067a3;
-$navbar-board-bg-color: #0079bf;
+$board-bg-color: rgb(76, 212, 130);
+$navbar-title-bg-color:  #036280;
+$navbar-dashboard-bg-color:  #378BA4;
 $app-main-color: #333;
 $gap: 8px;
 $column-header-height: 45px;
@@ -8,6 +8,9 @@ $column-footer-height: 36px;
 $column-border-radius: 5px;
 $card-border-radius: 3px;
 $list-bg-color: #ebecf0;
+$column-background-color: #FFD1DC;
+$watermelon: #FC6C85;
+
 
 
 //screen
