--- a/client/src/components/BoardContent/BoardContent.scss
+++ b/client/src/components/BoardContent/BoardContent.scss
@@ -4,9 +4,9 @@
 .board-columns{
     display: flex;
     margin: 0 $gap $gap;
-    overflow: auto;
     gap: 10px;
-    
+    overflow-x: auto;
+   
 
     &::-webkit-scrollbar{
         -webkit-appearance: none;
@@ -15,10 +15,6 @@
     &::-webkit-scrollbar:horizontal{
         height: 6px;
     }
-
-    &::-webkit-scrollbar:vertical{
-        width: 6px;
-    } 
 
     &::-webkit-scrollbar-thumb{
         background-color: rgba(255, 255, 255, 0.70);
@@ -41,11 +37,16 @@
         color: white;
         margin-left: $gap;
         font-size: 15px;
-        background-color: hsla(171, 71%, 21%, 0.24);
+        background-color: hsla(171, 70%, 21%, 0.421);
+        box-shadow: 0px 0px 12px 6px #BDBDBD;
         border-radius: $card-border-radius;
+        margin-top: 12px;
+        
 
         &:hover {
-            background-color: hsla(171, 71%, 21%, 0.34);
+            color: #fff;
+            background-color: #198754;
+            border-color: #198754;
         }
     }
 
@@ -53,6 +54,7 @@
         width: 250px;
         padding: 5px;
         margin-left: 10px;
+        margin-top: 10px;
         background-color: hsla(171, 71%, 21%, 0.24);
         border-radius: $card-border-radius;
 
