changed background color

--- a/client/src/_settings.scss
+++ b/client/src/_settings.scss
@@ -8,7 +8,7 @@ $column-footer-height: 36px;
 $column-border-radius: 5px;
 $card-border-radius: 3px;
 $list-bg-color: #ebecf0;
-$column-background-color: #FFD1DC;
+$column-background-color: #ebecf0;
 $watermelon: #FC6C85;
 
 
