--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -2,20 +2,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;300;400;500;600;700&family=Roboto:wght@700&family=Ubuntu:wght@400;500&display=swap');
 @import './components/Column/Column.scss';
 @import './components/AppBar/AppBar.scss';
-@import './components/BoardBar/BoardBar.scss';
+
 
 body {
     margin: 0;
     line-height: 1.3em;
     font-size: 14px;
     height: 100%;
-    background: url('../public/background.jpg') no-repeat center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size:100% 100vh;
-    overflow-y: hidden;
-    overflow-x: auto;
+    background: linear-gradient(360deg, rgba(250, 55, 208, 0.8), rgba(250, 249, 250, 0,) 70.71%), 
+            linear-gradient(280deg, rgb(15, 218, 228), rgb(71, 82, 210) 70.71%), 
+            ;
+   
    
 
     &::-webkit-scrollbar{
@@ -24,11 +21,11 @@ body {
 
     &::-webkit-scrollbar:horizontal{
         height: 8px;
-        background-color: black;
+        //background-color: #ebecf0;
     }
 
     &::-webkit-scrollbar-thumb{
-        background-color: $watermelon;
+        background-color: grey;
         border-radius: 8px;
         background-clip: padding-box;
     }  
@@ -39,7 +36,7 @@ body {
     height: 100vh;
     display: grid;
     grid-template-rows: 40px 50px 1fr;
-    color: $app-main-color;
+    //color: black;
     font-family: 'Roboto Slab', sans-serif;
     
     .icon{
@@ -50,8 +47,8 @@ body {
     .customize-input-column{
         border: none;
         cursor: pointer;
-        background-color: #FC6C85;
-        color: white;
+        background-color: #ebecf0;
+        
 
         &:focus{
             outline: none;
@@ -67,7 +64,7 @@ body {
     body{
         overflow-x: auto;
         overflow-y: hidden;
-        background: url('../public/background.jpg') no-repeat center center fixed;  
+        
     }
     
     .navbar-app, .navbar-board{
@@ -79,47 +76,6 @@ body {
     .container{
         display: grid;
         grid-template-rows: 35px 40px;
-    }
-
-    .board-columns{
-        display: grid;
-        grid-template-rows: 75px auto 0.2fr;
-        overflow-x: auto;
-
-
-        &::-webkit-scrollbar{
-            -webkit-appearance: none;  
-        }
-    
-        &::-webkit-scrollbar:horizontal{
-            height: 6px;
-            background-color: black; 
-            
-        }
-    
-        &::-webkit-scrollbar-thumb{
-            background-color: $watermelon;
-            border-radius: 2px;
-            background-clip: padding-box;
-
-        }   
-        .add-new-column, .content-add-column{
-            grid-row-start: 1;
-            margin-left: 18px;
-            width: 270px;
-            text-align: center; 
-        }   
-        .content-add-column input{
-            height: 30px;
-        }
-        .group-btn button{
-            background-color: #198754; 
-            
-            
-            }
-        .group-btn i{
-            color: white; 
-        } 
         
     }
     
