--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -10,8 +10,11 @@ body {
     font-size: 14px;
     height: 100%;
     background: linear-gradient(360deg, rgba(250, 55, 208, 0.8), rgba(250, 249, 250, 0,) 70.71%), 
-            linear-gradient(280deg, rgb(15, 218, 228), rgb(71, 82, 210) 70.71%), 
+            linear-gradient(280deg, rgb(15, 218, 228), rgb(71, 82, 210) 70.71%),
             ;
+    background-repeat: no-repeat;
+    background-attachment: fixed;    
+
    
    
 
@@ -20,16 +23,16 @@ body {
     }
 
     &::-webkit-scrollbar:horizontal{
-        height: 8px;
+        height: 5px;
         //background-color: #ebecf0;
     }
 
     &::-webkit-scrollbar-thumb{
         background-color: grey;
-        border-radius: 8px;
+        border-radius: 5px;
         background-clip: padding-box;
     }  
-}    
+}
 
 
 .container{
